@@ -1,3 +1,7 @@
+2002-05-13 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+        * slabmode.cpp: Improve symmetry for backward calc.
+
 2002-05-08 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slab.cpp: Check values arguments of eps_at and mu_at.
